app/app.css
html {
  position: relative;
  min-height: 100%;
}

body {
  padding-top: 50px;
  /* Margin bottom by footer height */
  margin-bottom: 100px;
}

.footer {
  position: absolute;
  bottom: 0;
  width: 100%;

  padding: 20px 15px 0;

  /* Set the fixed height of the footer here */
  height: 60px;
  background-color: #f5f5f5;
}

.masthead {
  margin-bottom: 0px;

  background-color: #eee;
  background-image: url(img/bg.jpg);
  background-position: 0% 100%;
  background-size: cover;
  background-repeat: no-repeat;
  height: 95vh;
  -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
          box-shadow: inset 0 0 100px rgba(0,0,0,.5);

  color: #eee;
  text-shadow: black 0.3em 0.3em 0.3em;
  text-align: center;
}

.section-header {
  background-color: #197519;
  color: #eee
}

.marketing .col-lg-4 {
  margin-bottom: 20px;
  text-align: center;
}
.marketing h2 {
  font-weight: normal;
}
.marketing .col-lg-4 p {
  margin-right: 10px;
  margin-left: 10px;
}

